ci(releaser): add proper tags

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -29,7 +29,7 @@
         {"type": "chore", "section": "🔧 Maintenance", "hidden": true},
         {"type": "BREAKING CHANGE", "section": "⚠ BREAKING CHANGES", "hidden": false}
       ],
-      "extra-label": "release, dotnet",
+      "extra-label": ["release", "dotnet"],
       "date-format": "%Y-%m-%d"
     }
   }
